--- a/src/lib/MenuPageFace/MenuPageFace.css
+++ b/src/lib/MenuPageFace/MenuPageFace.css
@@ -21,8 +21,10 @@
 
 .menu-page-face img {
   opacity: 0;
-  height: 100%;
-  object-fit: cover;
+  width: 100%;
+  /* height: 100%; */
+  /* height: 500px; */
+  /* object-fit: cover; */
 }
 
 .menu-page-face img.loaded {
@@ -31,10 +33,14 @@
 
 /* Animations */
 .menu-page .menu-page-face.front {
-  animation: show-page 0.8s ease-in-out forwards;
+  opacity: 1;
+  transition: opacity 0.5s cubic-bezier(1, 0, 0, 1);
+  /* animation: show-page 0.8s ease-in-out forwards; */
 }
 .menu-page.flipped .menu-page-face.front {
-  animation: hide-page-face 0.8s ease-in-out forwards;
+  opacity: 0;
+  transition: opacity 0.5s cubic-bezier(1, 0, 0, 1);
+  /* animation: hide-page-face 0.8s ease-in-out forwards; */
 }
 
 .loading-animation {
@@ -46,7 +52,7 @@
   left: 0;
   background: var(--bg-color-2);
   border: 1px solid var(--bg-color-4);
-  border-radius: 0.5rem;
+  border-radius: 0 0.5rem 0.5rem 0;
   display: flex;
   justify-content: center;
   align-items: center;
